# integrador-api/src/routes/usuariosRoutes.ts
@@ -1,20 +1,19 @@
-import { Router } from 'express'
-import {
-    getAllUsuarios,
-    getPaginatedUsuarios,
-    getUsuarioById,
-    createUsuario,
-    updateUsuario,
+import { Router } from 'express';
+import { createUsuario, deleteUsuario, getAllUsuarios, getPaginatedUsuarios, getUsuarioById, updateUsuario } from '../controller/usuariosController';
+import { authorizeAdmin } from '../middleware/authorize';
+
+
+const router = Router();
+
+router.get('/usuarios', getAllUsuarios);
+router.get('/usuarios/paginado', getPaginatedUsuarios);
+router.get('/usuarios/:id', getUsuarioById);
+router.post('/usuarios', createUsuario);
+router.put('/usuarios/:id', updateUsuario);
+router.delete(
+    '/usuarios/:id',
+    authorizeAdmin,
     deleteUsuario
-} from '../controller/usuariosController'
+);
 
-const router = Router()
-
-router.get('/usuarios/paginado', getPaginatedUsuarios)
-router.get('/usuarios/:id', getUsuarioById)
-router.get('/usuarios', getAllUsuarios)
-router.post('/usuarios', createUsuario)
-router.put('/usuarios/:id', updateUsuario)
-router.delete('/usuarios/:id', deleteUsuario)
-
-export default router
+export default router;
